Put changes under the appropriate header. Headers can include API CHANGES,
DIFFERENT BEHAVIOR, BUG FIXES, DEPENDENCIES, ENHANCEMENTS, NEW FEATURES, and
OTHER. Entries should be in chronological order, i.e. oldest at the top

0.04  DDD, MMM ##, 2013

  [ENHANCEMENTS]
  
  * Created a general patching function, used now by Windows and BSD build
    systems, and used to patch the test files.
  
  [BUG FIXES]
  
  * Patched MidnightBSD detection.
  
  * Added -fPIC flag for systems whose Perl was compiled with it.
  
  * Fixed stdarg.h issues for older gcc header collections.
  
  [OTHER]
  
  * Added a commit hook (and instructions in the README for activation) which
    should help keep this file up-to-date. :-)

0.03  Sun, Aug 25, 2013

  [ENHANCEMENTS]
  
  * Added work-around for Mac smoke tester's erroneous configuration.
  
  * Included tcc's test suite.
  
  [BUG FIXES]
  
  * Tweaked BSD make invocation.
  
  * Fixed Windows compiler detection code.

0.02  Wed, Aug 21, 2013

  [BUG FIXES]
  
  * Fixed incorrect MANIFEST issues and other build system problems.

0.01  Wed, Aug 21, 2013

  Initial release!
  
  * Compiles and installs tcc on Windows, Linux, and Mac OSX.
  
  * Installs to a sharedir location, and is Perl-specific.
  
  * Provides simple mechanisms for use in Build.PL files.
  
  * "use Alien::TinyCC" modifies PATH so tcc can be found.