@@ -28,32 +28,4 @@ My::Build::apply_patches('src/configure' =>
 	
 );
 
-### ucontext location detection patch ###
-
-use File::Temp qw/ tempfile /;
-use Config;
-
-# Test for ucontext.h vs sys/ucontext.h
-sub try_include_file {
-	my $lib_name = shift;
-	my ($out_fh, $out_filename) = tempfile(UNLINK => 1);
-	print $out_fh "#include <$lib_name>\n";
-	close $out_fh;
-	print "Testing for ucontext as $lib_name...\n";
-	return system("$Config{cc} $out_filename") == 0 ? $lib_name : undef;
-}
-
-my $ucontext_include = try_include_file('ucontext.h')
-	|| try_include_file('sys/ucontext.h')
-	|| die "Unable to locate ucontext!";
-
-# Now patch tcc.h for the proper ucontext location
-My::Build::apply_patches('src/tcc.h'
-	qr{#include <sys/ucontext\.h>} => sub {
-		my ($in_fh, $out_fh, $line) = @_;
-		print $out_fh "#include <ucontext.h>\n";
-		return 1;
-	},
-) if $ucontext_include eq 'ucontext.h';
-
 1;
